cmake_minimum_required(VERSION 3.26)
project(contest_01)

set(CMAKE_CXX_STANDARD 17)

add_executable(contest_01
        1/main.cpp
        3/main.cpp
        5/main.cpp
        7/main.cpp
        9/main.cpp
        11/main.cpp
        13/main.cpp
        15/main.cpp
        17/main.cpp
        18/main.cpp
        19/main.cpp
        20/main.cpp)
